Backend/Grammar/analyzer/GolightParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Golight.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace analyzer {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GolightParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, TIPO=50, ASSIGN_SHORT=51, ASSIGN=52, 
		PLUS_ASSIGN=53, MINUS_ASSIGN=54, FLOAT64=55, INT=56, BOOLEANO=57, STRING=58, 
		ID=59, RUNE=60, WHITESPACE=61, SINGLELINE_COMMENT=62, MULTILINE_COMMENT=63;
	public const int
		RULE_program = 0, RULE_instruccion = 1, RULE_bloquessentencias = 2, RULE_declaration = 3, 
		RULE_slices = 4, RULE_lista_valores_slicemulti = 5, RULE_lista_valores = 6, 
		RULE_sentenciastransfer = 7, RULE_seccontrol = 8, RULE_if = 9, RULE_else = 10, 
		RULE_for = 11, RULE_switch = 12, RULE_lista_cases = 13, RULE_case = 14, 
		RULE_funcion = 15, RULE_lista_parametros = 16, RULE_print = 17, RULE_concatenacion = 18, 
		RULE_incredecre = 19, RULE_expression = 20, RULE_expr = 21, RULE_lista_expresiones = 22, 
		RULE_funcembebidas = 23, RULE_struct = 24, RULE_lista_valores_struct = 25, 
		RULE_listastruct = 26, RULE_valor = 27;
	public static readonly string[] ruleNames = {
		"program", "instruccion", "bloquessentencias", "declaration", "slices", 
		"lista_valores_slicemulti", "lista_valores", "sentenciastransfer", "seccontrol", 
		"if", "else", "for", "switch", "lista_cases", "case", "funcion", "lista_parametros", 
		"print", "concatenacion", "incredecre", "expression", "expr", "lista_expresiones", 
		"funcembebidas", "struct", "lista_valores_struct", "listastruct", "valor"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'var'", "'{'", "'}'", "','", "'break'", "'continue'", 
		"'return'", "'if'", "'('", "')'", "'else'", "'for'", "';'", "'range'", 
		"'switch'", "'case'", "':'", "'default'", "'func'", "'fmt.Println'", "'++'", 
		"'--'", "'-'", "'!'", "'%'", "'*'", "'/'", "'+'", "'<'", "'>'", "'<='", 
		"'>='", "'.'", "'=='", "'!='", "'&&'", "'||'", "'strconv.Atoi'", "'strconv.ParseFloat'", 
		"'reflect.TypeOf'", "'slices.Index'", "'strings.Join'", "'len'", "'append'", 
		"'type'", "'struct'", "'nil'", null, "':='", "'='", "'+='", "'-='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "TIPO", "ASSIGN_SHORT", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
		"FLOAT64", "INT", "BOOLEANO", "STRING", "ID", "RUNE", "WHITESPACE", "SINGLELINE_COMMENT", 
		"MULTILINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Golight.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GolightParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GolightParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GolightParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GolightParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionContext[] instruccion() {
			return GetRuleContexts<InstruccionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionContext instruccion(int i) {
			return GetRuleContext<InstruccionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 56;
				instruccion();
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2270657537720340362L) != 0) );
			State = 61;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SlicesContext slices() {
			return GetRuleContext<SlicesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IncredecreContext incredecre() {
			return GetRuleContext<IncredecreContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncembebidasContext funcembebidas() {
			return GetRuleContext<FuncembebidasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentenciastransferContext sentenciastransfer() {
			return GetRuleContext<SentenciastransferContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SeccontrolContext seccontrol() {
			return GetRuleContext<SeccontrolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncionContext funcion() {
			return GetRuleContext<FuncionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BloquessentenciasContext bloquessentencias() {
			return GetRuleContext<BloquessentenciasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(Context, State);
		EnterRule(_localctx, 2, RULE_instruccion);
		try {
			State = 74;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 63;
				slices();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 64;
				declaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 65;
				print();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 66;
				incredecre();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 67;
				funcembebidas();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 68;
				@struct();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 69;
				sentenciastransfer();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 70;
				seccontrol();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 71;
				funcion();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 72;
				bloquessentencias();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 73;
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BloquessentenciasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionContext[] instruccion() {
			return GetRuleContexts<InstruccionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InstruccionContext instruccion(int i) {
			return GetRuleContext<InstruccionContext>(i);
		}
		public BloquessentenciasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bloquessentencias; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBloquessentencias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BloquessentenciasContext bloquessentencias() {
		BloquessentenciasContext _localctx = new BloquessentenciasContext(Context, State);
		EnterRule(_localctx, 4, RULE_bloquessentencias);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(T__0);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 77;
				instruccion();
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2270657537720340362L) != 0) );
			State = 82;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(GolightParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN_SHORT() { return GetToken(GolightParser.ASSIGN_SHORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(GolightParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS_ASSIGN() { return GetToken(GolightParser.PLUS_ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS_ASSIGN() { return GetToken(GolightParser.MINUS_ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIPO() { return GetToken(GolightParser.TIPO, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaration);
		try {
			State = 109;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84;
				Match(ID);
				State = 85;
				Match(ASSIGN_SHORT);
				State = 86;
				expression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87;
				Match(ID);
				State = 88;
				Match(ASSIGN);
				State = 89;
				expression();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 90;
				Match(ID);
				State = 91;
				Match(PLUS_ASSIGN);
				State = 92;
				expression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 93;
				Match(ID);
				State = 94;
				Match(MINUS_ASSIGN);
				State = 95;
				expression();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 96;
				Match(T__2);
				State = 97;
				Match(ID);
				State = 98;
				Match(TIPO);
				State = 99;
				Match(ASSIGN);
				State = 100;
				expression();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 101;
				Match(T__2);
				State = 102;
				Match(ID);
				State = 103;
				Match(TIPO);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 104;
				Match(T__2);
				State = 105;
				expression();
				State = 106;
				Match(ASSIGN);
				State = 107;
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SlicesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(GolightParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIPO() { return GetToken(GolightParser.TIPO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Lista_valoresContext lista_valores() {
			return GetRuleContext<Lista_valoresContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN_SHORT() { return GetToken(GolightParser.ASSIGN_SHORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(GolightParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Lista_valores_slicemultiContext lista_valores_slicemulti() {
			return GetRuleContext<Lista_valores_slicemultiContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ValorContext valor() {
			return GetRuleContext<ValorContext>(0);
		}
		public SlicesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_slices; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSlices(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SlicesContext slices() {
		SlicesContext _localctx = new SlicesContext(Context, State);
		EnterRule(_localctx, 8, RULE_slices);
		int _la;
		try {
			State = 166;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111;
				Match(ID);
				State = 112;
				_la = TokenStream.LA(1);
				if ( !(_la==ASSIGN_SHORT || _la==ASSIGN) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 113;
				Match(T__0);
				State = 114;
				Match(T__1);
				State = 115;
				Match(TIPO);
				State = 116;
				Match(T__3);
				State = 117;
				lista_valores(0);
				State = 118;
				Match(T__4);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120;
				Match(T__2);
				State = 121;
				Match(ID);
				State = 122;
				Match(T__0);
				State = 123;
				Match(T__1);
				State = 124;
				Match(TIPO);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 125;
				Match(ID);
				State = 126;
				Match(ASSIGN_SHORT);
				State = 127;
				Match(T__0);
				State = 128;
				Match(T__1);
				State = 129;
				Match(T__0);
				State = 130;
				Match(T__1);
				State = 131;
				Match(TIPO);
				State = 132;
				Match(T__3);
				State = 133;
				lista_valores_slicemulti();
				State = 134;
				Match(T__5);
				State = 135;
				Match(T__4);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 137;
				Match(ID);
				State = 138;
				Match(T__0);
				State = 139;
				expression();
				State = 140;
				Match(T__1);
				State = 141;
				Match(T__0);
				State = 142;
				expression();
				State = 143;
				Match(T__1);
				State = 144;
				Match(ASSIGN);
				State = 145;
				Match(T__3);
				State = 146;
				lista_valores_slicemulti();
				State = 147;
				Match(T__4);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 149;
				Match(ID);
				State = 150;
				Match(T__0);
				State = 151;
				expression();
				State = 152;
				Match(T__1);
				State = 153;
				Match(T__0);
				State = 154;
				expression();
				State = 155;
				Match(T__1);
				State = 156;
				Match(ASSIGN);
				State = 157;
				valor();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 159;
				Match(ID);
				State = 160;
				Match(T__0);
				State = 161;
				expression();
				State = 162;
				Match(T__1);
				State = 163;
				Match(ASSIGN);
				State = 164;
				valor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_valores_slicemultiContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Lista_valoresContext[] lista_valores() {
			return GetRuleContexts<Lista_valoresContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_valoresContext lista_valores(int i) {
			return GetRuleContext<Lista_valoresContext>(i);
		}
		public Lista_valores_slicemultiContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_valores_slicemulti; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_valores_slicemulti(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lista_valores_slicemultiContext lista_valores_slicemulti() {
		Lista_valores_slicemultiContext _localctx = new Lista_valores_slicemultiContext(Context, State);
		EnterRule(_localctx, 10, RULE_lista_valores_slicemulti);
		try {
			int _alt;
			State = 186;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 168;
				Match(T__3);
				State = 169;
				lista_valores(0);
				State = 170;
				Match(T__4);
				State = 178;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 171;
						Match(T__5);
						State = 172;
						Match(T__3);
						State = 173;
						lista_valores(0);
						State = 174;
						Match(T__4);
						}
						} 
					}
					State = 180;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 181;
				Match(T__3);
				State = 182;
				lista_valores(0);
				State = 183;
				Match(T__4);
				State = 184;
				Match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_valoresContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_valoresContext lista_valores() {
			return GetRuleContext<Lista_valoresContext>(0);
		}
		public Lista_valoresContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_valores; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGolightVisitor<TResult> typedVisitor = visitor as IGolightVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_valores(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lista_valoresContext lista_valores() {
		return lista_valores(0);
	}

	private Lista_valoresContext lista_valores(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Lista_valoresContext _localctx = new Lista_valoresContext(Context, _parentState);
		Lista_valoresContext _prevctx = _localctx;
		int _startState = 12;
		EnterRecursionRule(_localctx, 12, RULE_lista_valores, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 189;
			expression();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 196;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Lista_valoresContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_lista_valores);
					State = 191;
					if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
					State = 192;
					Match(T__5);
					State = 193;
					expression();
					}
					} 
				}
				State = 198;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,7,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
